--- a/.gitignore
+++ b/.gitignore
@@ -2926,3 +2926,4 @@ money-manager-ui/node_modules/vue-tsc/LICENSE
 money-manager-ui/node_modules/vue-tsc/package.json
 money-manager-ui/node_modules/vue-tsc/README.md
 money-manager-ui/node_modules/vue-tsc/bin/vue-tsc.js
+MoneyManager.Api/obj/Debug/net8.0/MoneyManager.Api.sourcelink.json
