make api handle user authentication

--- a/MoneyManager.Api/appsettings.json
+++ b/MoneyManager.Api/appsettings.json
@@ -2,7 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=MoneyManagerDb;Username=admin;Password=YourStrongPassword"
   },
-
+  "JwtSettings": {
+    "Issuer": "YourApp",
+    "Audience": "YourAppUsers",
+    "SecretKey": "e5d8f12b7a9c3f6d8e1f23456abc7890"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
