generate new token provider, remove jwt secret

--- a/MoneyManager.Api/appsettings.json
+++ b/MoneyManager.Api/appsettings.json
@@ -5,7 +5,7 @@
   "JwtSettings": {
     "Issuer": "YourApp",
     "Audience": "YourAppUsers",
-    "SecretKey": "e5d8f12b7a9c3f6d8e1f23456abc7890"
+    "SecretKey": ""
   },
   "Logging": {
     "LogLevel": {
